create form for creating new posts

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bustle</title>
     <meta name="description" content="">
+    <link rel="shortcut icon" href=https://cdn.bustle.com/bustle/production/public/favicon-9dff06.ico type=image/x-icon>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
